--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm start start-server --prefix server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/codewithsathya/zuii/issues"
   },
-  "homepage": "https://github.com/codewithsathya/zuii#readme"
+  "homepage": "https://github.com/codewithsathya/zuii#readme",
+  "dependencies": {
+    "axios": "^1.3.4"
+  }
 }
