--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/codewithsathya/zuii/issues"
   },
-  "homepage": "https://github.com/codewithsathya/zuii#readme",
-  "dependencies": {
-    "axios": "^1.3.4"
-  }
+  "homepage": "https://github.com/codewithsathya/zuii#readme"
 }
