--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.2"
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^6.0.1",
+    "mongoose": "^7.0.2",
+    "xss-clean": "^0.1.1"
   }
 }
