--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^6.0.1",
     "mongoose": "^7.0.2",
+    "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   }
 }
