--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.3",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
