Add JWT secret key

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
 PROJECT_NAME=zuii
 PORT=<port_no>
 MONGO_URL=mongodb+srv://<username>:<password>@cluster0.cxfh7.mongodb.net/<project_name>?retryWrites=true&w=majority
+JWT_SECRET_KEY=<secret_key>
