--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
+    "mongoose-autopopulate": "^1.0.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   }
