fix environment variables

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,5 @@ PORT=<port_no>
 MONGO_URL=mongodb+srv://<username>:<password>@cluster0.cxfh7.mongodb.net/<project_name>?retryWrites=true&w=majority
 JWT_SECRET_KEY=<secret_key>
 NODE_ENV=<production or development>
+PROD_API_URL=<https://backend-url>
+DEVELOPMENT_API_URL=<https://backend-localhost-url:PORT>
